# ShadowSeek

./: .cursorignore  .env.backup  .env_working  .gitignore  .gitkeep  README.md  SETUP_SCRIPTS_README.md  env.example  env_template.txt  ghidra_bridge_server.py  pyproject.toml  quick_test.py  requirements.txt  reset_environment.bat  reset_environment.sh  run.py  setup-shadowseek.py  setup.py  setup_environment.bat  setup_environment.py  start_all.bat  start_flask_reliable.bat  start_ghidra_bridge_new.bat  stop.bat  test_configuration.py  verify_installation.py  view_bridge_logs.bat
Docs/: AI_PROVIDERS_SETUP.md  API_DOCUMENTATION.md  BRIDGE_RESTORATION_COMPLETED.md  BRIDGE_RESTORATION_SUMMARY.md  ENHANCED_PLATFORM_SUMMARY.md  ENVIRONMENT_VARIABLES.md  ESSENTIAL_FILES.md  GHIDRA_BRIDGE_TROUBLESHOOTING.md  JFX_BRIDGE_FIX_DOCUMENTATION.md  MIGRATION_SUMMARY.md  PHASE_12_UI_POLISH_SESSION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_SCRIPTS_README.md  VULNERABILITY_DETECTION_COMPLETED.md  api-reference-ai-insights.md  api-reference-binary-comparison.md  api-reference-data-management.md  ghidra_bridge_integration.md
analysis_scripts/: analyze_functions.py  bulk_decompile_functions.py  comprehensive_analysis_direct.py  decompile_exports.py  decompile_function.py  ghidriff_diff_wrapper.py  ghidriff_simple_wrapper.py  quick_analysis.py  simple_analysis.py
archive/: PROGRESS.md  Project.md  SOLUTION_SUMMARY.md  TESTING_CODE_ARCHIVE.md  TEST_REPORT.md  UTILITIES_ARCHIVE.md  WINDOWS_FIXES.md  ghidra_flask_integration_plan.md  old-example-file.py  package-lock.json  test_ghidra_basic.py  test_installation.py
backup_current_implementation/: ghidra_bridge_manager.py  start_all.bat  start_ghidra_bridge_new.bat
flask_app/: __init__.py  ai_insights_endpoint.py  ai_service.py  app.py  config.py  enhanced_security_analyzer.py  forwarder_dll_analyzer.py  fuzzing_harness_generator.py  ghidra_bridge_manager.py  ghidra_bridge_manager_old_working.py  import_endpoint.py  models.py  multi_provider_ai_service.py  routes.py  simple_security_analyzer.py  swagger_api.py  swagger_docs.py  task_manager.py  unified_security_analyzer.py  vulnerability_engine.py  web_search.py
frontend/: package-lock.json  package.json  tsconfig.json
memory-bank/: activeContext.md  complete-platform-summary.md  fuzzing-implementation-summary.md  productContext.md  progress.md  (+4 more)
(+122 files in other folders)
